--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           Autocompletar búsquedas <br>
           <input type="checkbox" name="wallpaper-toogle" id="show-wallpaper"
             style="margin-right: 5px; margin-top: 10px;" data-toggle="tooltip" data-placement="top"
-            title="Desactivar esto, puede ayudar a un menor uso de ram y a tener un sitio mas rapido">
+            title="Desactivar esto, puede ayudar a un menor uso de memoria ram y a tener un sitio mas rapido">
           Mostrar fondo
           <div class="separator">
           </div>
@@ -81,6 +81,29 @@
       </div>
     </div>
   </div>
+  <!--***************************-->
+  <!--***************************-->
+  <input type="button" id="show-alert" data-toggle="modal" data-target="#alertCh" hidden>
+  <!--***************************-->
+  <div class="modal fade" id="alertCh" tabindex="-1" role="dialog" aria-labelledby="sttgs" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Error al Buscar</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <ul>
+            <li><h6 id="alert-code">ERR</h6></li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
   <script src="assets/js/search.js"></script>
   <script src="assets/js/app.js"></script>
   <script src="assets/js/interactions.js"></script>
