--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="assets/img/iconSt.png" type="image/x-icon">
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="assets/css/scrollbar.css">
   <noscript>
     <META HTTP-EQUIV="REFRESH" CONTENT="0;URL=error-js.html">
   </noscript>
@@ -45,6 +46,11 @@
     <p class="like-wallp" data-toggle="tooltip" data-placement="left" title="Mostrar fondo"><a class="lw-link-draw">¿Te
         agrada este
         fondo?</a></p>
+  </div>
+  <!--***************************-->
+  <!--***************************-->
+  <div class="web-preview">
+    <iframe src="" id="view-i"></iframe>
   </div>
   <!--***************************-->
   <!--***************************-->
