--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link rel="shortcut icon" href="assets/img/iconSt.png" type="image/x-icon">
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="assets/css/scrollbar.css">
   <noscript>
     <META HTTP-EQUIV="REFRESH" CONTENT="0;URL=error-js.html">
   </noscript>
@@ -34,6 +33,9 @@
       </div>
     </form>
   </div>
+  <div class="page-prev">
+    <img src="assets/img/preview_25px.png" alt="Web Preview" title="Previsualización web (F2)" id="prev-w">
+  </div>
   <div id="dowst"></div>
   <div class="menuSQ">
     <img src="assets/img/squared_menu_24px.png" alt="Squared Menu" class="menuPi" title="Aplicaciones" id="apps-menu">
@@ -49,7 +51,7 @@
   </div>
   <!--***************************-->
   <!--***************************-->
-  <div class="web-preview">
+  <div id="content-preview" style="display: none;">
     <iframe src="" id="view-i"></iframe>
   </div>
   <!--***************************-->
