--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   <link rel="stylesheet" href="assets/css/animate.css">
   <noscript>
     <META HTTP-EQUIV="REFRESH" CONTENT="0;URL=error-js.html">
-  </noscript>
+  </noscript> 
 </head>
 
 <body>
+  <script src="assets/js/translation.js"></script>
   <div class="background-overlay"></div>
   <div class="wp"></div>
   <div id="engine-google"></div>
@@ -35,7 +36,7 @@
     </form>
     <!--***************************-->
     <div id="content-preview" style="display: none;">
-      <iframe src="" id="view-i"></iframe>
+      <iframe src="" id="view-i" target="_top"></iframe>
     </div>
     <!--***************************-->
   </div>
