--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="modal-footer">
           <a href="" id="clear-settings-btn" data-toggle="tooltip" data-placement="top"
             title="Reiniciar todos los ajustes a los valores predeterminados">Reiniciar</a>
-          <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" id="close-modal1">Cerrar</button>
         </div>
       </div>
     </div>
